# dock-chaos

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dock_chaos/: __init__.py  cli.py  dashboard.py  docker_client.py  engine.py  faults.py  reporter.py
examples/: sample_chaos_report.md
tests/: test_dashboard.py  test_dock_chaos.py
