[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dock-chaos"
version = "0.2.0"
description = "Chaos engineering toolkit for Docker Compose — break your services on purpose."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Aadit Trivedi", email = "aadittrivedi09@gmail.com"}]
dependencies = [
    "docker>=7.0.0",
    "click>=8.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
dock-chaos = "dock_chaos.cli:main"

[project.urls]
Homepage = "https://github.com/AaditTrivedi/dock-chaos"
Repository = "https://github.com/AaditTrivedi/dock-chaos"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
